--- a/styling.css
+++ b/styling.css
@@ -1,4 +1,22 @@
-* {
-    font-family: courier new;
-    font-variant: mono;
+body,
+h1,
+p,
+button {
+    margin: 0;
+    padding: 0;
+    font-family: "Courier New", monospace;
+    text-align: center;
+}
+
+body {
+    background-image: url("./letters.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+    height: 100vh;
 }
