--- a/styling.css
+++ b/styling.css
@@ -1,15 +1,19 @@
+@font-face {
+    font-family: Playfair Display;
+    src: url("./fonts/PlayfairDisplay-VariableFont_wght.ttf");
+    /* Source: https://fonts.google.com/specimen/Playfair+Display */
+}
+
 body,
-h1,
 p,
 button {
     margin: 0;
     padding: 0;
     font-family: "Courier New", monospace;
-    text-align: center;
 }
 
 body {
-    background-image: url("./letters.jpg");
+    background-image: url("./images/letters.jpg");
     background-repeat: no-repeat;
     background-size: cover;
 
@@ -19,4 +23,31 @@ body {
     align-items: center;
 
     height: 100vh;
+}
+
+.contentBox {
+    background-color: #f5f5f5;
+    border-style: solid;
+    border-radius: 20px;
+    border-width: 5px;
+    border-color: black;
+}
+
+button {
+    padding: 10px 20px;
+    border: solid;
+    border-color: black;
+    border-width: 2px;
+    border-radius: 20px;
+    background-color: #3498db;
+    color: white;
+    font-size: 2em;
+    cursor: pointer;
+    margin-bottom: 10px;
+    transition: background-color 0.3s ease;
+
+}
+
+button:hover {
+    background-color: #2980b9;
 }
